fix: scrollbar not properly displayed on jfx 16

--- a/HMCL/src/main/resources/assets/css/root.css
+++ b/HMCL/src/main/resources/assets/css/root.css
@@ -1241,6 +1241,7 @@
     -fx-background-color: null;
     -fx-background-insets: 0;
     -fx-padding: 0;
+    -fx-snap-to-pixel: false;
 }
 
 .scroll-pane:focused {
